plugins {
    id 'java'
    id 'java-library'
    id 'application'
    id 'org.springframework.boot' version '2.1.6.RELEASE'
}

mainClassName = "com.github.coleb1911.ghost2.Ghost2Application"
group 'com.github.cbryant02'
version '0.1'

sourceCompatibility = JavaVersion.VERSION_1_10
targetCompatibility = JavaVersion.VERSION_1_10

repositories {
    mavenCentral()
}

dependencies {
    // Misc libraries
    implementation group: 'com.discord4j', name: 'discord4j-core', version: '3.0.7'
    implementation group: 'org.aeonbits.owner', name: 'owner', version: '1.0.10'
    implementation group: 'org.reflections', name: 'reflections', version: '0.9.11'
    implementation group: 'org.tinylog', name: 'tinylog', version: '1.3.6'
    implementation group: 'org.tinylog', name: 'slf4j-binding', version: '1.3.6'
    implementation group: 'com.zaxxer', name: 'HikariCP', version: '3.3.1'
    implementation group: 'com.h2database', name: 'h2', version: '1.4.199'

    // Spring
    // Logback is excluded in order to avoid conflict with TinyLog
    api(group: 'org.springframework.boot', name: 'spring-boot-starter', version: '2.1.6.RELEASE') {
        exclude group: 'ch.qos.logback', module: 'logback-classic'
    }
    api group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.1.9.RELEASE'

    // Hibernate
    implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.4.3.Final'
    implementation group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.4.3.Final'
}

bootJar {
    exclude('ghost.properties')
    manifest {
        attributes 'Main-Class': 'org.springframework.boot.loader.PropertiesLauncher'
    }
}

compileJava {
    inputs.property("moduleName", "ghost2.main")
    doFirst {
        options.compilerArgs = [
                '--module-path', classpath.asPath
        ]
        classpath = files()
    }
}